# Lume

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  package-lock.json  package.json  vite.config.ts
crates/core/: Cargo.toml
crates/core/src/: config.rs  error.rs  lib.rs  rank.rs  traits.rs  types.rs
crates/core/tests/: config_validation.rs  trait_seams.rs
crates/index/: Cargo.toml
crates/index/src/: commit.rs  lib.rs  progress.rs  walk.rs
crates/index/tests/: commit.rs  indexer.rs
crates/ipc/: Cargo.toml
crates/ipc/src/: lib.rs  protocol.rs
crates/ipc/tests/: socket_sidecar.rs  wire_shape.rs
crates/media/: Cargo.toml
crates/media/src/: lib.rs
crates/platform/: Cargo.toml
crates/platform/src/: lib.rs
crates/store/: Cargo.toml
crates/store/src/: lib.rs  schema.rs
crates/store/tests/: sqlite_store.rs
scripts/: m0_siglip_mps_probe.py  m0_sqlite_vec_probe.sh  macos_appium_smoke.mjs
sidecar/: pyproject.toml
sidecar/src/lume_sidecar/: __init__.py  batching.py  embedder.py  framing.py  protocol.py  server.py
sidecar/tests/: test_embedder.py  test_framing.py  test_protocol.py  test_server.py
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  runtime.rs
src/lib/: commands.ts
wire-fixtures/: embed_one_request.json  embed_one_response.json  embed_request.json  embed_response_ok_failed.json  embed_text_request.json
