[project]
name = "lume-sidecar"
version = "0.0.0"
description = "Lume's inference black box: decode + preprocess + SigLIP 2 embedding over a Unix socket (DESIGN §6, §9)."
requires-python = ">=3.11"
# Runtime deps (torch, transformers, pillow-heif, rawpy) are intentionally NOT
# pinned yet — they land with the M0 spike, which proves SigLIP 2 Base on MPS
# inside a signed bundle (BUILD.md M0). The scaffold tests run without them.
dependencies = []

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lume_sidecar"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
