[project]
name = "lume-sidecar"
version = "0.0.0"
description = "Lume's inference black box: decode + preprocess + SigLIP 2 embedding over a Unix socket (DESIGN §6, §9)."
requires-python = ">=3.11"
# Normal tests run without ML deps. The `m0` dependency group carries the
# heavyweight SigLIP/MPS proof deps; production runtime pins land with packaging.
dependencies = []

[dependency-groups]
dev = [
    "pillow>=12.2.0",
    "pillow-heif>=1.4.0",
    "pytest>=8",
    "ruff>=0.6",
]
m0 = [
    "numpy>=2",
    "pillow>=11",
    "pillow-heif>=1.4.0",
    "rawpy>=0.27.0",
    "torch>=2.7",
    "torchvision>=0.22",
    "transformers>=4.53",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lume_sidecar"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
