[package]
name = "lume-store"
description = "L1 persistence: sqlite + sqlite-vec adapter for VectorStore and the metadata store (WAL, single-writer funnel)."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
lume-core.workspace = true
half.workspace = true
tracing.workspace = true
rusqlite = { version = "0.40.1", features = ["bundled"] }
sqlite-vec = "=0.1.9"

[dev-dependencies]
tempfile = "3"
